# tax-cross-check

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/tax/: federal.rs  mod.rs  years.rs
src-tauri/src/tax/states/: mod.rs  nj.rs  ny.rs
